[package]
name = "fb-proxy"
description            = "Yazi event proxy"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
fb-config = { path = "../config", version = "26.2.2" }
fb-macro = { path = "../macro", version = "26.2.2" }
fb-parser = { path = "../parser", version = "26.2.2" }
fb-shared = { path = "../shared", version = "26.2.2" }
fb-widgets = { path = "../widgets", version = "26.2.2" }

# External dependencies
tokio = { workspace = true }

