[package]
name = "fb-scheduler"
description            = "Yazi task scheduler"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
fb-binding = { path = "../binding", version = "26.2.2" }
fb-config = { path = "../config", version = "26.2.2" }
fb-dds = { path = "../dds", version = "26.2.2" }
fb-fs = { path = "../fs", version = "26.2.2" }
fb-macro = { path = "../macro", version = "26.2.2" }
fb-parser = { path = "../parser", version = "26.2.2" }
fb-plugin = { path = "../plugin", version = "26.2.2" }
fb-proxy = { path = "../proxy", version = "26.2.2" }
fb-shared = { path = "../shared", version = "26.2.2" }
fb-term = { path = "../term", version = "26.2.2" }
fb-vfs = { path = "../vfs", version = "26.2.2" }

# External dependencies
anyhow                 = { workspace = true }
async-priority-channel = "0.2.0"
foldhash               = { workspace = true }
hashbrown              = { workspace = true }
lru                    = { workspace = true }
mlua                   = { workspace = true }
ordered-float          = { workspace = true }
parking_lot            = { workspace = true }
serde                  = { workspace = true }
tokio                  = { workspace = true }
tokio-util             = { workspace = true }
tracing                = { workspace = true }

[target."cfg(unix)".dependencies]
libc = { workspace = true }

