[package]
name = "fb-shim"
description            = "Yazi crate shims"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
fb-macro = { path = "../macro", version = "26.2.2" }

# External dependencies
crossterm = { workspace = true }
ratatui   = { workspace = true, features = ["unstable-rendered-line-info"] }
twox-hash = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { workspace = true, features = [ "use-dev-tty", "libc" ] }

