[package]
name = "fb-tty"
description            = "Yazi TTY access layer"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
fb-macro = { path = "../macro", version = "26.2.2" }
fb-shared = { path = "../shared", version = "26.2.2" }

# External dependencies
parking_lot = { workspace = true }
tracing     = { workspace = true }

[target."cfg(unix)".dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [ "Win32_Globalization", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Console", "Win32_System_Threading", "Win32_Security" ] }

