[package]
name = "fb-vfs"
description            = "Yazi virtual file system"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
fb-config = { path = "../config", version = "26.2.2" }
fb-fs = { path = "../fs", version = "26.2.2" }
fb-macro = { path = "../macro", version = "26.2.2" }
fb-sftp = { path = "../sftp", version = "26.2.2" }
fb-shared = { path = "../shared", version = "26.2.2" }

# External dependencies
anyhow      = { workspace = true }
chrono      = { workspace = true }
deadpool    = { version = "0.13.0", default-features = false, features = [ "managed", "rt_tokio_1" ] }
either      = { workspace = true }
futures     = { workspace = true }
hashbrown   = { workspace = true }
parking_lot = { workspace = true }
russh       = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
typed-path  = { workspace = true }

