[package]
name = "fb-watcher"
description            = "Yazi file watcher"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
fb-adapter = { path = "../adapter", version = "26.2.2" }
fb-dds = { path = "../dds", version = "26.2.2" }
fb-fs = { path = "../fs", version = "26.2.2" }
fb-macro = { path = "../macro", version = "26.2.2" }
fb-proxy = { path = "../proxy", version = "26.2.2" }
fb-shared = { path = "../shared", version = "26.2.2" }
fb-vfs = { path = "../vfs", version = "26.2.2" }

# External dependencies
futures          = { workspace = true }
hashbrown        = { workspace = true }
notify           = { version = "8.2.0", default-features = false, features = [ "macos_fsevent" ] }
parking_lot      = { workspace = true }
percent-encoding = { workspace = true }
tokio            = { workspace = true }
tokio-stream     = { workspace = true }
tracing          = { workspace = true }

