[package]
name = "fb-widgets"
description            = "Yazi user interface widgets"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
fb-adapter = { path = "../adapter", version = "26.2.2" }
fb-config = { path = "../config", version = "26.2.2" }
fb-macro = { path = "../macro", version = "26.2.2" }
fb-shared = { path = "../shared", version = "26.2.2" }
fb-tty = { path = "../tty", version = "26.2.2" }

# External dependencies
anyhow        = { workspace = true }
base64        = { workspace = true }
crossterm     = { workspace = true }
futures       = { workspace = true }
mlua          = { workspace = true }
parking_lot   = { workspace = true }
ratatui       = { workspace = true }
tokio         = { workspace = true }
unicode-width = { workspace = true }

[target."cfg(windows)".dependencies]
clipboard-win = "5.4.1"

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { workspace = true, features = [ "use-dev-tty", "libc" ] }

